--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ opacity:1;
 }
 .btn1 {opacity:0.5;
       background-color:cornflowerblue;
-       width:50%;
+       width:990px;
 }
 .text1{
   font-size:36px;
