--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,11 @@ opacity:1;
       margin: auto;
 }
 .text {
-      font-size: 22px;
+      font-size: 36px;
+      font-family: Arial, sans-serif;
+}
+.mechanics {
+font-size:22px;
       font-family: Arial, sans-serif;
 }
 .header1 {
