--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ opacity:1;
 }
 .btn1 {opacity:0.5;
       background-color:cornflowerblue;
-       width: 940px;
+       width: 50%;
 }
 .text1{
   font-size:36px;
