--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,7 @@ opacity:1;
 .mechanics {
       font-size: 22px;
       font-family: Arial, sans-serif;
+      width: 100%
 }
 .header1 {
       text-align: center;
