--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ opacity:1;
 }
 .btn1 {opacity:0.5;
       background-color:cornflowerblue;
-       width: 102%;
+       width: 940px;
 }
 .text1{
   font-size:36px;
@@ -16,7 +16,7 @@ opacity:1;
 }
 .btn2 {opacity:0.5;
        background-color:cornflowerblue;
-       width: 102%;
+       width: 940px;
 }
 .text2{
   font-size:36px;
@@ -27,7 +27,7 @@ opacity:1;
 .btn3:hover {opacity:1;}
 .btn3 {opacity:0.5;
        background-color:cornflowerblue;
-       width: 102%;
+       width: 940px;
 }
 .text3{
   font-size:36px;
