--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 #indexheader2 {
-      text-size: 
+      text-size: 26px;
 }
 .btn1:hover {
 opacity:1;
@@ -56,7 +56,7 @@ opacity:1;
 }
 .header1 {
       text-align: center;
-      font-size: 26px;
+      font-size: 36px;
       font-weight:bold;
 }
 .header2 {
