--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,11 @@
 #indexheader2 {
       font-size: 26px;
+      text-align: center;
+      font-family: Arial, sans-serif;
+}
+.imgdec {
+      font-size: 20px;
+      font-family: Arial, sans-serif;
 }
 .btn1:hover {
 opacity:1;
@@ -58,6 +64,7 @@ opacity:1;
       text-align: center;
       font-size: 36px;
       font-weight:bold;
+      font-family: Arial, sans-serif;
 }
 .header2 {
       text-align: center;
