--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
       text-align: center;
       font-family: Arial, sans-serif;
 }
-.imgdec {
+.imgdesc {
       font-size: 20px;
       font-family: Arial, sans-serif;
 }
