--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
       text-align: center;
       font-size: 36px;
       font-weight:bold;
+      font-family: 'Times New Roman', serif;
 }
 #indexheader2 {
       font-size: 26px;
