--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
 #indexheader2 {
       font-size: 26px;
       text-align: center;
+      font-family: 'Times New Roman', serif;
 }
 .imgdesc {
       font-size: 26px;
