--- a/styles.css
+++ b/styles.css
@@ -2,12 +2,12 @@
       text-align: center;
       font-size: 36px;
       font-weight:bold;
-      font-family: 'Times New Roman', serif;
+      font-family: Times New Roman, serif;
 }
 #indexheader2 {
       font-size: 26px;
       text-align: center;
-      font-family: 'Times New Roman', serif;
+      font-family: Times New Roman, serif;
 }
 .imgdesc {
       font-size: 26px;
