--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@
 opacity:1;
 }
 .btn1 {opacity:0.5;
-      background-color:cornflowerblue;
+      background-color:DeepSkyBlue;
        width: 627px;
 }
 .text1{
@@ -42,7 +42,7 @@ opacity:1;
       opacity:1;
 }
 .btn2 {opacity:0.5;
-       background-color:cornflowerblue;
+       background-color:DeepSkyBlue;
        width: 627px;
 }
 .text2{
@@ -53,7 +53,7 @@ opacity:1;
 
 .btn3:hover {opacity:1;}
 .btn3 {opacity:0.5;
-       background-color:cornflowerblue;
+       background-color:DeepSkyBlue;
        width: 627px;
 }
 .text3{
