--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@
       font-family: Times New Roman, serif;
 }
 #complist {
-      font-size: 26;
+      font-size: 26px;
 }
 .btn1:hover {
 opacity:1;
