--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@
       text-align: center;
       font-size: 20px;
 }
-.partheader {
+.partheader2 {
       text-align: center;
       font-size: 28px;
       font-family: Times New Roman, serif;
